# HHO_1D

./: HHO_kernel.py  LICENSE  README.md  getting_started.ipynb  pyproject.toml  test_HHO_kernel.py  test_basis.ipynb  test_implementation_cell.ipynb  test_transmission_problem_and_k=0.ipynb  test_utils.py  utils.py  validate_higher_order.ipynb  validation_higher_order.ipynb  validation_lowest_order.ipynb  validation_utils.py
notebooks/: getting_started.ipynb  validation_higher_order.ipynb  validation_lowest_order.ipynb  validation_utils.py
src/hho_1d/: HHO_kernel.py  __init__.py
test/: test_cell_problem.py  test_matrix_construction.py
