[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hho-1d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hho_1d"]